# stalker-tools

./: CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  build.sh
.github/lua-defs-linter/: Dockerfile
.github/scripts/: basic-utest.sh  release.sh
.github/workflows/: gcc-build-basic.yml  lua-defs-linter.yml  msys-compilation.yml  release.yml  shellcheck.yml
doc/: dltx-format.md
include/: dltx.h  dynarray.h  ltx.h
lib/: CMakeLists.txt  dltx.c  dltx_parser.c  dltx_parser.h  dynarray.c  filesystem.c  filesystem.h  huffman.c  ltx.c  ltx_parser.c  ltx_parser.h  ltx_reader.c  ltx_reader.h  utils.c  utils.h  xdb_archive.c
lib/include/: dltx.h  dynarray.h
lib/stcore/: CMakeLists.txt  dltx.c  dynarray.c  filesystem.h  huffman.h
lib/stcore/include/: dltx.h  dynarray.h  xdb_archive.h
lib/stfs/: CMakeLists.txt  README.md  stfs.c  stfs.h
lib/stfs/syscalls/: readlink.c  realpath.c
src/: CMakeLists.txt  dltx-reader.c  ltx-reader.c  xdb.c
tests/data/: case.ltx  deletion.ltx  dirty.ltx  glob.ltx  inheritance.ltx  mod_modfile_test.ltx  modfile.ltx  override-first.ltx  override-safe.ltx  override.ltx  simple.ltx
tests/data/glob/: gl1.ltx  zzz.ltx
tests/expected/: case.ltx  deletion.ltx  dirty.ltx  glob.ltx  inheritance.ltx  modfile.ltx  override-first.ltx  override-safe.ltx  override.ltx  simple.ltx
utils/: README.md  mod-config-exporter.lua
utils/lua-defs/: README.md  stalker-anomaly-debug_cmd_list.d.lua  xray-monolith-account_manager.d.lua  xray-monolith-actions.d.lua  xray-monolith-actor.d.lua  xray-monolith-ai.d.lua  xray-monolith-alife.d.lua  xray-monolith-bases.d.lua  xray-monolith-cconsole.d.lua  xray-monolith-color.d.lua  xray-monolith-cuiscriptwnd.d.lua  xray-monolith-engine.d.lua  xray-monolith-explosive.d.lua  xray-monolith-factory.d.lua  xray-monolith-filesystem.d.lua  xray-monolith-flags.d.lua  xray-monolith-fmatrix.d.lua  xray-monolith-game_object.d.lua  xray-monolith-gobjects.d.lua  xray-monolith-imgui.d.lua  xray-monolith-ini_class.d.lua  xray-monolith-ini_file.d.lua  xray-monolith-net_packet.d.lua  xray-monolith-properties.d.lua  xray-monolith-reader.d.lua  xray-monolith-rtoken_list.d.lua  xray-monolith-server_alife.d.lua  xray-monolith-server_objects.d.lua  xray-monolith-server_types.d.lua  xray-monolith-token_list.d.lua  xray-monolith-ui.d.lua  xray-monolith-unsorted.d.lua  xray-monolith-vector.d.lua  xray-monolith-weapons.d.lua
utils/mod-sys-config-exporter/: README.md  config-exporter.lua
utils/scripts/: gamedata-usvfs-workaround  ini-file-spliter
